<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authorization">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/top_background"
        android:id="@+id/top_background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/top_background"
        app:layout_constraintBottom_toBottomOf="@id/top_background"
        app:srcCompat="@drawable/women1"
        android:id="@+id/women1" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:text="@string/title_auth"
        android:textColor="@color/white"
        android:textSize="@dimen/size_36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/women1"
        app:layout_constraintBottom_toBottomOf="@id/women1"
        app:layout_constraintLeft_toLeftOf="@id/top_background"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/editTextTextEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/editTextTextEmailAddress"
        android:id="@+id/text_email"/>

    <EditText
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:paddingLeft="@dimen/main_padding"
        android:inputType="textEmailAddress"
        android:hint="@string/email_edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black_light"
        android:background="@drawable/edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_background"
        android:id="@+id/editTextTextEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/your_password"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/editTextTextPassword"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPassword"
        android:id="@+id/text_password"/>

    <EditText
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:paddingLeft="@dimen/main_padding"
        android:inputType="textPassword"
        android:hint="@string/password_edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black_light"
        android:background="@drawable/edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
        android:id="@+id/editTextTextPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/repeat_password"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/editTextTextPasswordAgain"
        app:layout_constraintBottom_toTopOf="@id/editTextTextPasswordAgain"
        android:id="@+id/text_password_repeat"/>

    <EditText
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_top_edit_text"
        android:paddingLeft="@dimen/main_padding"
        android:inputType="textPassword"
        android:hint="@string/password_again_edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/black_light"
        android:background="@drawable/edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
        android:id="@+id/editTextTextPasswordAgain"/>

    <TextView
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="40dp"
        android:background="@drawable/dark_green_button"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="@dimen/size_24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPasswordAgain"
        android:id="@+id/button_reg_auth"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/button_reg_auth"
        app:layout_constraintBottom_toBottomOf="@id/button_reg_auth"
        app:layout_constraintRight_toRightOf="@id/button_reg_auth"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/button_reg_auth"
        app:layout_constraintLeft_toLeftOf="@id/button_reg_auth"
        app:layout_constraintRight_toRightOf="@id/button_reg_auth"
        android:id="@+id/text_button"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="25dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:background="@drawable/light_green_button"
        app:backgroundTint="@null"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textSize="@dimen/size_24sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_button"
        android:id="@+id/button_log_auth"/>

</androidx.constraintlayout.widget.ConstraintLayout>