<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_intro"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/title_main_activity"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/size_40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/subtitle_main_activity"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="@dimen/size_20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:id="@+id/subtitle"/>

    <ImageView
        android:id="@+id/white_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/background_intro"
        app:layout_constraintRight_toRightOf="@id/background_intro"
        app:layout_constraintBottom_toBottomOf="@id/background_intro"
        app:srcCompat="@drawable/white_line" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/women"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/background_intro"
        android:id="@+id/women" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="30dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:background="@drawable/light_green_button"
        app:backgroundTint="@null"
        android:textAllCaps="false"
        android:text="@string/login"
        android:textSize="@dimen/size_24sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_intro"
        android:id="@+id/button_log_main"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="30dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:background="@drawable/light_green_button"
        app:backgroundTint="@null"
        android:textAllCaps="false"
        android:text="@string/signup"
        android:textSize="@dimen/size_24sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:letterSpacing="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_log_main"
        android:id="@+id/button_reg_main"/>

</androidx.constraintlayout.widget.ConstraintLayout>